--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -1,4 +1,9 @@
 {% extends 'shop/base.html' %}
 {% block content %}
-    <h1>Cart page</h1>
+{% load static %}
+
+<h1>Cart page</h1>
+
+
+
 {% endblock  %}
